compilerproject/old step 1+2/old_parser.output
Terminals which are not used

   ASSERT
   ASYNC
   AWAIT
   DEL
   FINALLY
   FROM
   IMPORT
   IS
   LAMBDA
   RAISE
   UNARY_PLUS
   UNARY_MINUS
   CURLY_LEFT_BRACKET
   CURLY_RIGHT_BRACKET
   SINGLE_QUOTATION
   DOUBLE_QUOTATION
   BACK_SLASH
   NO_CHANGES
   UNKNOWN_SYMBOL
   WHAIT_SPACE
   AT_SIGN
   EQUAL
   '+'
   '-'
   '*'
   '/'
   '|'
   UMINUS


Grammar

    0 $accept: file $end

    1 file: /* empty */
    2     | statements ENDMARKER
    3     | statements new_lines_plus ENDMARKER

    4 statements: statement
    5           | statements new_lines_plus statement

    6 statement: simple_stmts
    7          | compound_stmt

    8 simple_stmts: simple_stmt
    9             | simple_stmt COMMENTS
   10             | simple_stmts SEMICOLON simple_stmt

   11 new_lines_plus: NEW_LINE
   12               | new_lines_plus NEW_LINE

   13 identifiers: IDENTIFIER
   14            | identifiers COMMA IDENTIFIER

   15 constant: NUMBER
   16         | REAL_NUMBER
   17         | MULTILINE_STRING
   18         | STRING_LITERAL

   19 atom: constant
   20     | IDENTIFIER
   21     | NONE
   22     | TRUE
   23     | FALSE
   24     | func_call

   25 simple_stmt: expression
   26            | assign_statement
   27            | global_stmt
   28            | COMMENTS
   29            | PASS

   30 expression: atom
   31           | NOT atom
   32           | expression PLUS expression
   33           | expression MINUS expression
   34           | expression MULTIPLY expression
   35           | expression DIVIDE expression
   36           | expression MODULO expression
   37           | expression FLOOR_DIVIDE expression
   38           | expression EXPONENTIATE expression
   39           | expression BITWISE_AND expression
   40           | expression BITWISE_NEGATION expression
   41           | expression BITWISE_OR expression
   42           | expression BITWISE_XOR expression
   43           | expression LEFT_SHIFT expression
   44           | expression RIGHT_SHIFT expression
   45           | LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
   46           | expression EQUAL_TO expression
   47           | expression NOT_EQUAL_TO expression
   48           | expression LESS_THAN expression
   49           | expression LESS_THAN_OR_EQUAL_TO expression
   50           | expression GREATER_THAN expression
   51           | expression GREATER_THAN_OR_EQUAL_TO expression
   52           | expression AND expression
   53           | expression OR expression

   54 assign_statement: IDENTIFIER assignment_operator expression

   55 assignment_operator: PLUS_EQUAL
   56                    | MINUS_EQUAL
   57                    | DIVIDE_EQUAL
   58                    | MODULO_EQUAL
   59                    | MULTIPLY_EQUAL
   60                    | EXPONENTIATE_EQUAL
   61                    | FLOOR_DIVIDE_EQUAL
   62                    | RIGHT_SHIFT_EQUAL
   63                    | LEFT_SHIFT_EQUAL
   64                    | BITWISE_AND_EQUAL
   65                    | BITWISE_NEGATION_EQUAL
   66                    | BITWISE_OR_EQUAL
   67                    | BITWISE_XOR_EQUAL
   68                    | EQUALS

   69 global_stmt: GLOBAL identifiers

   70 nonlocal_stmt: NONLOCAL identifiers

   71 yield_stmt: YIELD identifiers

   72 break_stmt: BREAK

   73 continue_stmt: CONTINUE

   74 func_call: IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS
   75          | IDENTIFIER LEFT_PARENTHESIS parameters_ RIGHT_PARENTHESIS
   76          | IDENTIFIER DOT func_call

   77 parameters_: parameters
   78            | parameters COMMA

   79 parameters: parameter
   80           | parameters COMMA parameter

   81 parameter: expression

   82 return_stmt: RETURN
   83            | RETURN parameters_

   84 compound_stmt: if_stmt
   85              | func_def
   86              | while_stmt
   87              | for_stmt
   88              | with_stmt
   89              | match_stmt
   90              | try_except
   91              | def_class_stmt

   92 block: NEW_LINE INDENT statements DEDENT
   93      | NEW_LINE INDENT statements new_lines_plus DEDENT
   94      | statement

   95 if_stmt: if_header block NEW_LINE elif_else_

   96 if_header: IF expression COLON

   97 elif_else_: /* empty */
   98           | elif_else

   99 elif_else: elif_stmts else_stmt
  100          | elif_stmts
  101          | else_stmt

  102 else_stmt: ELSE COLON block

  103 elif_stmts: elif_stmt
  104           | elif_stmts elif_stmt

  105 elif_stmt: elif_header block NEW_LINE

  106 elif_header: ELIF expression COLON

  107 match_stmt: MATCH IDENTIFIER COLON new_lines_plus INDENT cases DEDENT

  108 cases: case
  109      | cases case

  110 case: CASE atom COLON block

  111 block_iteration: NEW_LINE INDENT statements_iteration DEDENT
  112                | NEW_LINE INDENT statements_iteration new_lines_plus DEDENT
  113                | statement_iteration

  114 statements_iteration: statement_iteration
  115                     | statements_iteration new_lines_plus statement_iteration

  116 statement_iteration: statement
  117                    | break_stmt
  118                    | continue_stmt

  119 while_stmt: WHILE expression COLON block_iteration

  120 for_stmt: for_header block_iteration

  121 for_header: FOR identifiers IN identifiers COLON
  122           | FOR identifiers IN func_call COLON

  123 block_func: NEW_LINE INDENT statements_func DEDENT
  124           | NEW_LINE INDENT statements_func new_lines_plus DEDENT
  125           | statement_func

  126 statements_func: statement_func
  127                | statements_func new_lines_plus statement_func

  128 statement_func: statement
  129               | nonlocal_stmt
  130               | yield_stmt
  131               | return_stmt

  132 func_def: DEF IDENTIFIER LEFT_PARENTHESIS def_parameters_ RIGHT_PARENTHESIS COLON block_func
  133         | DEF IDENTIFIER LEFT_PARENTHESIS def_parameters_ RIGHT_PARENTHESIS MINUS GREATER_THAN IDENTIFIER COLON block_func
  134         | DEF IDENTIFIER LEFT_PARENTHESIS def_parameters_ RIGHT_PARENTHESIS MINUS GREATER_THAN LEFT_PARENTHESIS identifiers RIGHT_PARENTHESIS COLON block_func

  135 def_parameters_: def_parameters
  136                | def_parameters COMMA def_parameter_star
  137                | def_parameters COMMA def_parameter_star COMMA def_parameters
  138                | def_parameters COMMA def_parameter_star COMMA def_parameter_star2
  139                | def_parameters COMMA def_parameter_star COMMA def_parameters COMMA def_parameter_star2
  140                | def_parameters COMMA def_parameter_star2
  141                | def_parameter_star
  142                | def_parameter_star COMMA def_parameters
  143                | def_parameter_star COMMA def_parameters COMMA def_parameter_star2
  144                | def_parameter_star COMMA def_parameter_star2
  145                | def_parameter_star2

  146 def_parameter_star: MULTIPLY IDENTIFIER

  147 def_parameter_star2: EXPONENTIATE IDENTIFIER

  148 def_parameters: /* empty */
  149               | def_parameter
  150               | def_parameters COMMA def_parameter

  151 def_parameter: IDENTIFIER
  152              | IDENTIFIER COLON SQUARE_LEFT_BRACKET fun_generic_identifire_ SQUARE_RIGHT_BRACKET
  153              | IDENTIFIER COLON def_parameter

  154 fun_generic_identifire_: fun_generic_identifire
  155                        | fun_generic_identifire_ COMMA fun_generic_identifire

  156 fun_generic_identifire: /* empty */
  157                       | IDENTIFIER
  158                       | SQUARE_LEFT_BRACKET fun_generic_identifire SQUARE_RIGHT_BRACKET

  159 with_stmt: WITH func_call AS IDENTIFIER COLON block

  160 try_except: try except
  161           | try new_lines_plus except

  162 try: TRY COLON block

  163 except: EXCEPT COLON block
  164       | EXCEPT IDENTIFIER COLON block
  165       | EXCEPT IDENTIFIER AS IDENTIFIER COLON block

  166 def_class_stmt: def_class_row block

  167 def_class_row: CLASS IDENTIFIER LEFT_PARENTHESIS generic_identifires_ RIGHT_PARENTHESIS COLON
  168              | CLASS IDENTIFIER COLON

  169 generic_identifires_: generic_identifires
  170                     | generic_identifires COMMA
  171                     | SQUARE_LEFT_BRACKET generic_identifires_ SQUARE_RIGHT_BRACKET
  172                     | SQUARE_LEFT_BRACKET generic_identifires_ SQUARE_RIGHT_BRACKET COMMA

  173 generic_identifires: generic_identifire
  174                    | generic_identifires COMMA generic_identifire

  175 generic_identifire: atom
  176                   | IDENTIFIER SQUARE_LEFT_BRACKET generic_identifires_ SQUARE_RIGHT_BRACKET


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
'|' (124)
error (256)
FALSE (258) 23
NONE (259) 21
TRUE (260) 22
AND (261) 52
AS (262) 159 165
ASSERT (263)
ASYNC (264)
AWAIT (265)
BREAK (266) 72
CLASS (267) 167 168
CONTINUE (268) 73
DEF (269) 132 133 134
DEL (270)
ELIF (271) 106
ELSE (272) 102
EXCEPT (273) 163 164 165
FINALLY (274)
FOR (275) 121 122
FROM (276)
GLOBAL (277) 69
IF (278) 96
IMPORT (279)
IN (280) 121 122
IS (281)
LAMBDA (282)
NONLOCAL (283) 70
NOT (284) 31
OR (285) 53
PASS (286) 29
RAISE (287)
RETURN (288) 82 83
TRY (289) 162
WHILE (290) 119
WITH (291) 159
YIELD (292) 71
EQUALS (293) 68
PLUS_EQUAL (294) 55
MINUS_EQUAL (295) 56
MULTIPLY_EQUAL (296) 59
DIVIDE_EQUAL (297) 57
FLOOR_DIVIDE_EQUAL (298) 61
MODULO_EQUAL (299) 58
EXPONENTIATE_EQUAL (300) 60
PLUS (301) 32
MINUS (302) 33 133 134
MULTIPLY (303) 34 146
DIVIDE (304) 35
FLOOR_DIVIDE (305) 37
MODULO (306) 36
EXPONENTIATE (307) 38 147
EQUAL_TO (308) 46
NOT_EQUAL_TO (309) 47
LESS_THAN (310) 48
GREATER_THAN (311) 50 133 134
LESS_THAN_OR_EQUAL_TO (312) 49
GREATER_THAN_OR_EQUAL_TO (313) 51
BITWISE_AND (314) 39
BITWISE_OR (315) 41
BITWISE_XOR (316) 42
BITWISE_NEGATION (317) 40
LEFT_SHIFT (318) 43
RIGHT_SHIFT (319) 44
UNARY_PLUS (320)
UNARY_MINUS (321)
REAL_NUMBER (322) 16
LEFT_PARENTHESIS (323) 45 74 75 132 133 134 167
RIGHT_PARENTHESIS (324) 45 74 75 132 133 134 167
SQUARE_LEFT_BRACKET (325) 152 158 171 172 176
SQUARE_RIGHT_BRACKET (326) 152 158 171 172 176
CURLY_LEFT_BRACKET (327)
CURLY_RIGHT_BRACKET (328)
COLON (329) 96 102 106 107 110 119 121 122 132 133 134 152 153 159
    162 163 164 165 167 168
COMMA (330) 14 78 80 136 137 138 139 140 142 143 144 150 155 170 172
    174
SEMICOLON (331) 10
DOT (332) 76
SINGLE_QUOTATION (333)
DOUBLE_QUOTATION (334)
BACK_SLASH (335)
MATCH (336) 107
CASE (337) 110
MULTILINE_STRING (338) 17
STRING_LITERAL (339) 18
NUMBER (340) 15
COMMENTS (341) 9 28
NEW_LINE (342) 11 12 92 93 95 105 111 112 123 124
INDENT (343) 92 93 107 111 112 123 124
DEDENT (344) 92 93 107 111 112 123 124
NO_CHANGES (345)
UNKNOWN_SYMBOL (346)
WHAIT_SPACE (347)
IDENTIFIER (348) 13 14 20 54 74 75 76 107 132 133 134 146 147 151 152
    153 157 159 164 165 167 168 176
ENDMARKER (349) 2 3
AT_SIGN (350)
BITWISE_AND_EQUAL (351) 64
BITWISE_OR_EQUAL (352) 66
BITWISE_XOR_EQUAL (353) 67
BITWISE_NEGATION_EQUAL (354) 65
LEFT_SHIFT_EQUAL (355) 63
RIGHT_SHIFT_EQUAL (356) 62
EQUAL (357)
UMINUS (358)


Nonterminals, with rules where they appear

$accept (109)
    on left: 0
file (110)
    on left: 1 2 3, on right: 0
statements (111)
    on left: 4 5, on right: 2 3 5 92 93
statement (112)
    on left: 6 7, on right: 4 5 94 116 128
simple_stmts (113)
    on left: 8 9 10, on right: 6 10
new_lines_plus (114)
    on left: 11 12, on right: 3 5 12 93 107 112 115 124 127 161
identifiers (115)
    on left: 13 14, on right: 14 69 70 71 121 122 134
constant (116)
    on left: 15 16 17 18, on right: 19
atom (117)
    on left: 19 20 21 22 23 24, on right: 30 31 110 175
simple_stmt (118)
    on left: 25 26 27 28 29, on right: 8 9 10
expression (119)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53, on right: 25 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52 53 54 81 96 106 119
assign_statement (120)
    on left: 54, on right: 26
assignment_operator (121)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68,
    on right: 54
global_stmt (122)
    on left: 69, on right: 27
nonlocal_stmt (123)
    on left: 70, on right: 129
yield_stmt (124)
    on left: 71, on right: 130
break_stmt (125)
    on left: 72, on right: 117
continue_stmt (126)
    on left: 73, on right: 118
func_call (127)
    on left: 74 75 76, on right: 24 76 122 159
parameters_ (128)
    on left: 77 78, on right: 75 83
parameters (129)
    on left: 79 80, on right: 77 78 80
parameter (130)
    on left: 81, on right: 79 80
return_stmt (131)
    on left: 82 83, on right: 131
compound_stmt (132)
    on left: 84 85 86 87 88 89 90 91, on right: 7
block (133)
    on left: 92 93 94, on right: 95 102 105 110 159 162 163 164 165
    166
if_stmt (134)
    on left: 95, on right: 84
if_header (135)
    on left: 96, on right: 95
elif_else_ (136)
    on left: 97 98, on right: 95
elif_else (137)
    on left: 99 100 101, on right: 98
else_stmt (138)
    on left: 102, on right: 99 101
elif_stmts (139)
    on left: 103 104, on right: 99 100 104
elif_stmt (140)
    on left: 105, on right: 103 104
elif_header (141)
    on left: 106, on right: 105
match_stmt (142)
    on left: 107, on right: 89
cases (143)
    on left: 108 109, on right: 107 109
case (144)
    on left: 110, on right: 108 109
block_iteration (145)
    on left: 111 112 113, on right: 119 120
statements_iteration (146)
    on left: 114 115, on right: 111 112 115
statement_iteration (147)
    on left: 116 117 118, on right: 113 114 115
while_stmt (148)
    on left: 119, on right: 86
for_stmt (149)
    on left: 120, on right: 87
for_header (150)
    on left: 121 122, on right: 120
block_func (151)
    on left: 123 124 125, on right: 132 133 134
statements_func (152)
    on left: 126 127, on right: 123 124 127
statement_func (153)
    on left: 128 129 130 131, on right: 125 126 127
func_def (154)
    on left: 132 133 134, on right: 85
def_parameters_ (155)
    on left: 135 136 137 138 139 140 141 142 143 144 145,
    on right: 132 133 134
def_parameter_star (156)
    on left: 146, on right: 136 137 138 139 141 142 143 144
def_parameter_star2 (157)
    on left: 147, on right: 138 139 140 143 144 145
def_parameters (158)
    on left: 148 149 150, on right: 135 136 137 138 139 140 142 143
    150
def_parameter (159)
    on left: 151 152 153, on right: 149 150 153
fun_generic_identifire_ (160)
    on left: 154 155, on right: 152 155
fun_generic_identifire (161)
    on left: 156 157 158, on right: 154 155 158
with_stmt (162)
    on left: 159, on right: 88
try_except (163)
    on left: 160 161, on right: 90
try (164)
    on left: 162, on right: 160 161
except (165)
    on left: 163 164 165, on right: 160 161
def_class_stmt (166)
    on left: 166, on right: 91
def_class_row (167)
    on left: 167 168, on right: 166
generic_identifires_ (168)
    on left: 169 170 171 172, on right: 167 171 172 176
generic_identifires (169)
    on left: 173 174, on right: 169 170 174
generic_identifire (170)
    on left: 175 176, on right: 173 174


state 0

    0 $accept: . file $end

    FALSE             shift, and go to state 1
    NONE              shift, and go to state 2
    TRUE              shift, and go to state 3
    CLASS             shift, and go to state 4
    DEF               shift, and go to state 5
    FOR               shift, and go to state 6
    GLOBAL            shift, and go to state 7
    IF                shift, and go to state 8
    NOT               shift, and go to state 9
    PASS              shift, and go to state 10
    TRY               shift, and go to state 11
    WHILE             shift, and go to state 12
    WITH              shift, and go to state 13
    REAL_NUMBER       shift, and go to state 14
    LEFT_PARENTHESIS  shift, and go to state 15
    MATCH             shift, and go to state 16
    MULTILINE_STRING  shift, and go to state 17
    STRING_LITERAL    shift, and go to state 18
    NUMBER            shift, and go to state 19
    COMMENTS          shift, and go to state 20
    IDENTIFIER        shift, and go to state 21

    $default  reduce using rule 1 (file)

    file              go to state 22
    statements        go to state 23
    statement         go to state 24
    simple_stmts      go to state 25
    constant          go to state 26
    atom              go to state 27
    simple_stmt       go to state 28
    expression        go to state 29
    assign_statement  go to state 30
    global_stmt       go to state 31
    func_call         go to state 32
    compound_stmt     go to state 33
    if_stmt           go to state 34
    if_header         go to state 35
    match_stmt        go to state 36
    while_stmt        go to state 37
    for_stmt          go to state 38
    for_header        go to state 39
    func_def          go to state 40
    with_stmt         go to state 41
    try_except        go to state 42
    try               go to state 43
    def_class_stmt    go to state 44
    def_class_row     go to state 45


state 1

   23 atom: FALSE .

    $default  reduce using rule 23 (atom)


state 2

   21 atom: NONE .

    $default  reduce using rule 21 (atom)


state 3

   22 atom: TRUE .

    $default  reduce using rule 22 (atom)


state 4

  167 def_class_row: CLASS . IDENTIFIER LEFT_PARENTHESIS generic_identifires_ RIGHT_PARENTHESIS COLON
  168              | CLASS . IDENTIFIER COLON

    IDENTIFIER  shift, and go to state 46


state 5

  132 func_def: DEF . IDENTIFIER LEFT_PARENTHESIS def_parameters_ RIGHT_PARENTHESIS COLON block_func
  133         | DEF . IDENTIFIER LEFT_PARENTHESIS def_parameters_ RIGHT_PARENTHESIS MINUS GREATER_THAN IDENTIFIER COLON block_func
  134         | DEF . IDENTIFIER LEFT_PARENTHESIS def_parameters_ RIGHT_PARENTHESIS MINUS GREATER_THAN LEFT_PARENTHESIS identifiers RIGHT_PARENTHESIS COLON block_func

    IDENTIFIER  shift, and go to state 47


state 6

  121 for_header: FOR . identifiers IN identifiers COLON
  122           | FOR . identifiers IN func_call COLON

    IDENTIFIER  shift, and go to state 48

    identifiers  go to state 49


state 7

   69 global_stmt: GLOBAL . identifiers

    IDENTIFIER  shift, and go to state 48

    identifiers  go to state 50


state 8

   96 if_header: IF . expression COLON

    FALSE             shift, and go to state 1
    NONE              shift, and go to state 2
    TRUE              shift, and go to state 3
    NOT               shift, and go to state 9
    REAL_NUMBER       shift, and go to state 14
    LEFT_PARENTHESIS  shift, and go to state 15
    MULTILINE_STRING  shift, and go to state 17
    STRING_LITERAL    shift, and go to state 18
    NUMBER            shift, and go to state 19
    IDENTIFIER        shift, and go to state 51

    constant    go to state 26
    atom        go to state 27
    expression  go to state 52
    func_call   go to state 32


state 9

   31 expression: NOT . atom

    FALSE             shift, and go to state 1
    NONE              shift, and go to state 2
    TRUE              shift, and go to state 3
    REAL_NUMBER       shift, and go to state 14
    MULTILINE_STRING  shift, and go to state 17
    STRING_LITERAL    shift, and go to state 18
    NUMBER            shift, and go to state 19
    IDENTIFIER        shift, and go to state 51

    constant   go to state 26
    atom       go to state 53
    func_call  go to state 32


state 10

   29 simple_stmt: PASS .

    $default  reduce using rule 29 (simple_stmt)


state 11

  162 try: TRY . COLON block

    COLON  shift, and go to state 54


state 12

  119 while_stmt: WHILE . expression COLON block_iteration

    FALSE             shift, and go to state 1
    NONE              shift, and go to state 2
    TRUE              shift, and go to state 3
    NOT               shift, and go to state 9
    REAL_NUMBER       shift, and go to state 14
    LEFT_PARENTHESIS  shift, and go to state 15
    MULTILINE_STRING  shift, and go to state 17
    STRING_LITERAL    shift, and go to state 18
    NUMBER            shift, and go to state 19
    IDENTIFIER        shift, and go to state 51

    constant    go to state 26
    atom        go to state 27
    expression  go to state 55
    func_call   go to state 32


state 13

  159 with_stmt: WITH . func_call AS IDENTIFIER COLON block

    IDENTIFIER  shift, and go to state 56

    func_call  go to state 57


state 14

   16 constant: REAL_NUMBER .

    $default  reduce using rule 16 (constant)

